kubernetes/common/minio-tenant/configs/codelab-console-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: codelab-console
  namespace: minio-system
spec:
  hostnames:
  - codelab-console.docker.localhost
  parentRefs:
  - name: traefik-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: codelab-console
      port: 9443
    matches:
    - path:
        type: PathPrefix
        value: /
